# aws-data-pipeline-demo

./: .gitignore  Makefile  README.md
.github/workflows/: cd-dev.yml  cd-prod.yml  cd-stage.yml  ci-dev.yml  ci.yml
app/data_generator/: requirements.txt
app/data_generator/src/: generate_and_upload.py
app/lambda_transform/: Dockerfile  pyproject.toml  requirements.txt
app/lambda_transform/src/: handler.py
app/lambda_transform/tests/: test_handler.py
infra/terraform/envs/dev/: backend.tf  dev.tfvars  main.tf  outputs.tf  variables.tf
infra/terraform/envs/prod/: backend.tf  main.tf  outputs.tf  prod.tfvars  variables.tf
infra/terraform/envs/stage/: backend.tf  main.tf  outputs.tf  stage.tfvars  variables.tf
infra/terraform/modules/alerts/: main.tf  variables.tf
infra/terraform/modules/eventbridge/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/s3/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
scripts/: build_lambda_package.sh
